--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "^3.0.4",
+    "meiosis-tracer": "^2.0.2",
     "style-loader": "^0.20.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
@@ -21,7 +22,9 @@
   },
   "dependencies": {
     "auth0-js": "^9.3.1",
-    "mithril": "^1.1.6"
+    "mithril": "^1.1.6",
+    "mithril-stream": "^1.1.0",
+    "path-to-regexp": "^2.4.0"
   },
   "scripts": {
     "start": "webpack-dev-server --open",
