--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "auth0-js": "^9.3.1",
     "mithril": "^1.1.6",
     "mithril-stream": "^1.1.0",
+    "patchinko": "^4.1.0",
     "path-to-regexp": "^2.4.0"
   },
   "scripts": {
